# playwright_pytest_mvp

./: .gitignore  README.md
deployment/: Dockerfile
env/: .env.template
playwright_project/: config.py  conftest.py  pyproject.toml
playwright_project/dataclasses/: api_method.py
playwright_project/deployment/: Dockerfile.dockerignore  entrypoint.sh  test.sh
playwright_project/generators/: data_generator_example.py
playwright_project/helper/: common_helper.py
playwright_project/models/request_models/: api_request_model_example.py
playwright_project/playwright_project/: config.py  conftest.py
playwright_project/playwright_project/tests/authorization/: test_authorization.py
playwright_project/playwright_project/tests/base/: auth.py
playwright_project/tests/authorization/: test_jokes.py
playwright_project/tests/base/: auth.py  jokes.py
playwright_project/tests/jokes/: test_jokes.py
